// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 format[__babel_estree] 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:10)
> 1 | _ = <div>}</div>
    |          ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:9)"
`;

exports[`snippet: #0 format[acorn] 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`? (1:10)
> 1 | _ = <div>}</div>
    |          ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`? (1:9)"
`;

exports[`snippet: #0 format[babel] 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:10)
> 1 | _ = <div>}</div>
    |          ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:9)"
`;

exports[`snippet: #0 format[babel-ts] 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:10)
> 1 | _ = <div>}</div>
    |          ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:9)"
`;

exports[`snippet: #0 format[espree] 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`? (1:10)
> 1 | _ = <div>}</div>
    |          ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`?"
`;

exports[`snippet: #0 format[flow] 1`] = `
"Unexpected token \`}\`. Did you mean \`{'}'}\`? (1:10)
> 1 | _ = <div>}</div>
    |          ^
Cause: Unexpected token \`}\`. Did you mean \`{'}'}\`? (1:9)"
`;

exports[`snippet: #0 format[meriyah] 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:10)
> 1 | _ = <div>}</div>
    |          ^
Cause: [1:9-1:9]: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`?"
`;

exports[`snippet: #0 format[oxc] 1`] = `
"Unexpected token. Did you mean \`{'}'}\` or \`&rbrace;\`? (1:10)
> 1 | _ = <div>}</div>
    |          ^"
`;

exports[`snippet: #0 format[oxc-ts] 1`] = `
"Unexpected token. Did you mean \`{'}'}\` or \`&rbrace;\`? (1:10)
> 1 | _ = <div>}</div>
    |          ^"
`;

exports[`snippet: #0 format[typescript] 1`] = `
"Unexpected token. Did you mean \`{'}'}\` or \`&rbrace;\`? (1:10)
> 1 | _ = <div>}</div>
    |          ^
Cause: Unexpected token. Did you mean \`{'}'}\` or \`&rbrace;\`?"
`;

exports[`snippet: #0 format[yuku] 1`] = `
"Unexpected '}' in JSX text (1:10)
> 1 | _ = <div>}</div>
    |          ^"
`;

exports[`snippet: #0 format[yuku-ts] 1`] = `
"Unexpected '}' in JSX text (1:10)
> 1 | _ = <div>}</div>
    |          ^"
`;

exports[`snippet: #1 format[__babel_estree] 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:10)
> 1 | _ = <div>></div>
    |          ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:9)"
`;

exports[`snippet: #1 format[acorn] 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`? (1:10)
> 1 | _ = <div>></div>
    |          ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`? (1:9)"
`;

exports[`snippet: #1 format[babel] 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:10)
> 1 | _ = <div>></div>
    |          ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:9)"
`;

exports[`snippet: #1 format[babel-ts] 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:10)
> 1 | _ = <div>></div>
    |          ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:9)"
`;

exports[`snippet: #1 format[espree] 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`? (1:10)
> 1 | _ = <div>></div>
    |          ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`?"
`;

exports[`snippet: #1 format[flow] 1`] = `
"Unexpected token \`>\`. Did you mean \`{'>'}\`? (1:10)
> 1 | _ = <div>></div>
    |          ^
Cause: Unexpected token \`>\`. Did you mean \`{'>'}\`? (1:9)"
`;

exports[`snippet: #1 format[meriyah] 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:10)
> 1 | _ = <div>></div>
    |          ^
Cause: [1:9-1:9]: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`?"
`;

exports[`snippet: #1 format[oxc] 1`] = `
"Unexpected token. Did you mean \`{'>'}\` or \`&gt;\`? (1:10)
> 1 | _ = <div>></div>
    |          ^"
`;

exports[`snippet: #1 format[oxc-ts] 1`] = `
"Unexpected token. Did you mean \`{'>'}\` or \`&gt;\`? (1:10)
> 1 | _ = <div>></div>
    |          ^"
`;

exports[`snippet: #1 format[typescript] 1`] = `
"Unexpected token. Did you mean \`{'>'}\` or \`&gt;\`? (1:10)
> 1 | _ = <div>></div>
    |          ^
Cause: Unexpected token. Did you mean \`{'>'}\` or \`&gt;\`?"
`;

exports[`snippet: #1 format[yuku] 1`] = `
"Unexpected '>' in JSX text (1:10)
> 1 | _ = <div>></div>
    |          ^"
`;

exports[`snippet: #1 format[yuku-ts] 1`] = `
"Unexpected '>' in JSX text (1:10)
> 1 | _ = <div>></div>
    |          ^"
`;

exports[`snippet: #2 format[__babel_estree] 1`] = `
"Unexpected token (1:11)
> 1 | _ = <div><</div>
    |           ^
Cause: Unexpected token (1:10)"
`;

exports[`snippet: #2 format[acorn] 1`] = `
"Unexpected token (1:11)
> 1 | _ = <div><</div>
    |           ^
Cause: Unexpected token (1:10)"
`;

exports[`snippet: #2 format[babel] 1`] = `
"Unexpected token (1:11)
> 1 | _ = <div><</div>
    |           ^
Cause: Unexpected token (1:10)"
`;

exports[`snippet: #2 format[babel-ts] 1`] = `
"Unexpected token (1:11)
> 1 | _ = <div><</div>
    |           ^
Cause: Unexpected token (1:10)"
`;

exports[`snippet: #2 format[espree] 1`] = `
"Unexpected token < (1:11)
> 1 | _ = <div><</div>
    |           ^
Cause: Unexpected token <"
`;

exports[`snippet: #2 format[flow] 1`] = `
"Unexpected token \`<\`, expected the token \`>\` (1:11)
> 1 | _ = <div><</div>
    |           ^
Cause: Unexpected token \`<\`, expected the token \`>\` (1:10)"
`;

exports[`snippet: #2 format[meriyah] 1`] = `
"Unexpected token (1:11)
> 1 | _ = <div><</div>
    |           ^
Cause: [1:10-1:11]: Unexpected token"
`;

exports[`snippet: #2 format[oxc] 1`] = `
"Unexpected token (1:11)
> 1 | _ = <div><</div>
    |           ^"
`;

exports[`snippet: #2 format[oxc-ts] 1`] = `
"Unexpected token (1:11)
> 1 | _ = <div><</div>
    |           ^"
`;

exports[`snippet: #2 format[typescript] 1`] = `
"Identifier expected. (1:11)
> 1 | _ = <div><</div>
    |           ^
Cause: Identifier expected."
`;

exports[`snippet: #2 format[yuku] 1`] = `
"Expected '</' to close the JSX element, but found '<<' (1:10)
> 1 | _ = <div><</div>
    |          ^^"
`;

exports[`snippet: #2 format[yuku-ts] 1`] = `
"Expected '</' to close the JSX element, but found '<<' (1:10)
> 1 | _ = <div><</div>
    |          ^^"
`;

exports[`snippet: #3 format[__babel_estree] 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:17)
> 1 | _ = <div>{"foo"}}</div>
    |                 ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:16)"
`;

exports[`snippet: #3 format[acorn] 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`? (1:17)
> 1 | _ = <div>{"foo"}}</div>
    |                 ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`? (1:16)"
`;

exports[`snippet: #3 format[babel] 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:17)
> 1 | _ = <div>{"foo"}}</div>
    |                 ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:16)"
`;

exports[`snippet: #3 format[babel-ts] 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:17)
> 1 | _ = <div>{"foo"}}</div>
    |                 ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:16)"
`;

exports[`snippet: #3 format[espree] 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`? (1:17)
> 1 | _ = <div>{"foo"}}</div>
    |                 ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`?"
`;

exports[`snippet: #3 format[flow] 1`] = `
"Unexpected token \`}\`. Did you mean \`{'}'}\`? (1:17)
> 1 | _ = <div>{"foo"}}</div>
    |                 ^
Cause: Unexpected token \`}\`. Did you mean \`{'}'}\`? (1:16)"
`;

exports[`snippet: #3 format[meriyah] 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:17)
> 1 | _ = <div>{"foo"}}</div>
    |                 ^
Cause: [1:16-1:16]: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`?"
`;

exports[`snippet: #3 format[oxc] 1`] = `
"Unexpected token. Did you mean \`{'}'}\` or \`&rbrace;\`? (1:17)
> 1 | _ = <div>{"foo"}}</div>
    |                 ^"
`;

exports[`snippet: #3 format[oxc-ts] 1`] = `
"Expected \`:\` but found \`}\` (1:16)
> 1 | _ = <div>{"foo"}}</div>
    |                ^"
`;

exports[`snippet: #3 format[typescript] 1`] = `
"':' expected. (1:16)
> 1 | _ = <div>{"foo"}}</div>
    |                ^
Cause: ':' expected."
`;

exports[`snippet: #3 format[yuku] 1`] = `
"Unexpected '}' in JSX text (1:17)
> 1 | _ = <div>{"foo"}}</div>
    |                 ^"
`;

exports[`snippet: #3 format[yuku-ts] 1`] = `
"Shorthand property must be an identifier (1:11)
> 1 | _ = <div>{"foo"}}</div>
    |           ^^^^^"
`;

exports[`snippet: #4 format[__babel_estree] 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:17)
> 1 | _ = <div>{"foo"}></div>
    |                 ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:16)"
`;

exports[`snippet: #4 format[acorn] 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`? (1:17)
> 1 | _ = <div>{"foo"}></div>
    |                 ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`? (1:16)"
`;

exports[`snippet: #4 format[babel] 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:17)
> 1 | _ = <div>{"foo"}></div>
    |                 ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:16)"
`;

exports[`snippet: #4 format[babel-ts] 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:17)
> 1 | _ = <div>{"foo"}></div>
    |                 ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:16)"
`;

exports[`snippet: #4 format[espree] 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`? (1:17)
> 1 | _ = <div>{"foo"}></div>
    |                 ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`?"
`;

exports[`snippet: #4 format[flow] 1`] = `
"Unexpected token \`>\`. Did you mean \`{'>'}\`? (1:17)
> 1 | _ = <div>{"foo"}></div>
    |                 ^
Cause: Unexpected token \`>\`. Did you mean \`{'>'}\`? (1:16)"
`;

exports[`snippet: #4 format[meriyah] 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:17)
> 1 | _ = <div>{"foo"}></div>
    |                 ^
Cause: [1:16-1:16]: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`?"
`;

exports[`snippet: #4 format[oxc] 1`] = `
"Unexpected token. Did you mean \`{'>'}\` or \`&gt;\`? (1:17)
> 1 | _ = <div>{"foo"}></div>
    |                 ^"
`;

exports[`snippet: #4 format[oxc-ts] 1`] = `
"Expected \`:\` but found \`}\` (1:16)
> 1 | _ = <div>{"foo"}></div>
    |                ^"
`;

exports[`snippet: #4 format[typescript] 1`] = `
"':' expected. (1:16)
> 1 | _ = <div>{"foo"}></div>
    |                ^
Cause: ':' expected."
`;

exports[`snippet: #4 format[yuku] 1`] = `
"Unexpected '>' in JSX text (1:17)
> 1 | _ = <div>{"foo"}></div>
    |                 ^"
`;

exports[`snippet: #4 format[yuku-ts] 1`] = `
"Shorthand property must be an identifier (1:11)
> 1 | _ = <div>{"foo"}></div>
    |           ^^^^^"
`;

exports[`snippet: #5 format[__babel_estree] 1`] = `
"Unexpected token (1:18)
> 1 | _ = <div>{"foo"}<</div>
    |                  ^
Cause: Unexpected token (1:17)"
`;

exports[`snippet: #5 format[acorn] 1`] = `
"Unexpected token (1:18)
> 1 | _ = <div>{"foo"}<</div>
    |                  ^
Cause: Unexpected token (1:17)"
`;

exports[`snippet: #5 format[babel] 1`] = `
"Unexpected token (1:18)
> 1 | _ = <div>{"foo"}<</div>
    |                  ^
Cause: Unexpected token (1:17)"
`;

exports[`snippet: #5 format[babel-ts] 1`] = `
"Unexpected token (1:18)
> 1 | _ = <div>{"foo"}<</div>
    |                  ^
Cause: Unexpected token (1:17)"
`;

exports[`snippet: #5 format[espree] 1`] = `
"Unexpected token < (1:18)
> 1 | _ = <div>{"foo"}<</div>
    |                  ^
Cause: Unexpected token <"
`;

exports[`snippet: #5 format[flow] 1`] = `
"Unexpected token \`<\`, expected the token \`>\` (1:18)
> 1 | _ = <div>{"foo"}<</div>
    |                  ^
Cause: Unexpected token \`<\`, expected the token \`>\` (1:17)"
`;

exports[`snippet: #5 format[meriyah] 1`] = `
"Unexpected token (1:18)
> 1 | _ = <div>{"foo"}<</div>
    |                  ^
Cause: [1:17-1:18]: Unexpected token"
`;

exports[`snippet: #5 format[oxc] 1`] = `
"Unexpected token (1:18)
> 1 | _ = <div>{"foo"}<</div>
    |                  ^"
`;

exports[`snippet: #5 format[oxc-ts] 1`] = `
"Expected \`:\` but found \`}\` (1:16)
> 1 | _ = <div>{"foo"}<</div>
    |                ^"
`;

exports[`snippet: #5 format[typescript] 1`] = `
"':' expected. (1:16)
> 1 | _ = <div>{"foo"}<</div>
    |                ^
Cause: ':' expected."
`;

exports[`snippet: #5 format[yuku] 1`] = `
"Expected '</' to close the JSX element, but found '<<' (1:17)
> 1 | _ = <div>{"foo"}<</div>
    |                 ^^"
`;

exports[`snippet: #5 format[yuku-ts] 1`] = `
"Shorthand property must be an identifier (1:11)
> 1 | _ = <div>{"foo"}<</div>
    |           ^^^^^"
`;

exports[`snippet: #6 format[__babel_estree] 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:10)
> 1 | _ = <div>}{"foo"}</div>
    |          ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:9)"
`;

exports[`snippet: #6 format[acorn] 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`? (1:10)
> 1 | _ = <div>}{"foo"}</div>
    |          ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`? (1:9)"
`;

exports[`snippet: #6 format[babel] 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:10)
> 1 | _ = <div>}{"foo"}</div>
    |          ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:9)"
`;

exports[`snippet: #6 format[babel-ts] 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:10)
> 1 | _ = <div>}{"foo"}</div>
    |          ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:9)"
`;

exports[`snippet: #6 format[espree] 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`? (1:10)
> 1 | _ = <div>}{"foo"}</div>
    |          ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`?"
`;

exports[`snippet: #6 format[flow] 1`] = `
"Unexpected token \`}\`. Did you mean \`{'}'}\`? (1:10)
> 1 | _ = <div>}{"foo"}</div>
    |          ^
Cause: Unexpected token \`}\`. Did you mean \`{'}'}\`? (1:9)"
`;

exports[`snippet: #6 format[meriyah] 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:10)
> 1 | _ = <div>}{"foo"}</div>
    |          ^
Cause: [1:9-1:9]: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`?"
`;

exports[`snippet: #6 format[oxc] 1`] = `
"Unexpected token. Did you mean \`{'}'}\` or \`&rbrace;\`? (1:10)
> 1 | _ = <div>}{"foo"}</div>
    |          ^"
`;

exports[`snippet: #6 format[oxc-ts] 1`] = `
"Unexpected token (1:10)
> 1 | _ = <div>}{"foo"}</div>
    |          ^"
`;

exports[`snippet: #6 format[typescript] 1`] = `
"Expression expected. (1:10)
> 1 | _ = <div>}{"foo"}</div>
    |          ^
Cause: Expression expected."
`;

exports[`snippet: #6 format[yuku] 1`] = `
"Unexpected '}' in JSX text (1:10)
> 1 | _ = <div>}{"foo"}</div>
    |          ^"
`;

exports[`snippet: #6 format[yuku-ts] 1`] = `
"Unexpected token '}' (1:10)
> 1 | _ = <div>}{"foo"}</div>
    |          ^"
`;

exports[`snippet: #7 format[__babel_estree] 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:10)
> 1 | _ = <div>>{"foo"}</div>
    |          ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:9)"
`;

exports[`snippet: #7 format[acorn] 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`? (1:10)
> 1 | _ = <div>>{"foo"}</div>
    |          ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`? (1:9)"
`;

exports[`snippet: #7 format[babel] 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:10)
> 1 | _ = <div>>{"foo"}</div>
    |          ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:9)"
`;

exports[`snippet: #7 format[babel-ts] 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:10)
> 1 | _ = <div>>{"foo"}</div>
    |          ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:9)"
`;

exports[`snippet: #7 format[espree] 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`? (1:10)
> 1 | _ = <div>>{"foo"}</div>
    |          ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`?"
`;

exports[`snippet: #7 format[flow] 1`] = `
"Unexpected token \`>\`. Did you mean \`{'>'}\`? (1:10)
> 1 | _ = <div>>{"foo"}</div>
    |          ^
Cause: Unexpected token \`>\`. Did you mean \`{'>'}\`? (1:9)"
`;

exports[`snippet: #7 format[meriyah] 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:10)
> 1 | _ = <div>>{"foo"}</div>
    |          ^
Cause: [1:9-1:9]: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`?"
`;

exports[`snippet: #7 format[oxc] 1`] = `
"Unexpected token. Did you mean \`{'>'}\` or \`&gt;\`? (1:10)
> 1 | _ = <div>>{"foo"}</div>
    |          ^"
`;

exports[`snippet: #7 format[oxc-ts] 1`] = `
"Unexpected token (1:10)
> 1 | _ = <div>>{"foo"}</div>
    |          ^"
`;

exports[`snippet: #7 format[typescript] 1`] = `
"Expression expected. (1:10)
> 1 | _ = <div>>{"foo"}</div>
    |          ^
Cause: Expression expected."
`;

exports[`snippet: #7 format[yuku] 1`] = `
"Unexpected '>' in JSX text (1:10)
> 1 | _ = <div>>{"foo"}</div>
    |          ^"
`;

exports[`snippet: #7 format[yuku-ts] 1`] = `
"Expected '>' to close a type assertion, but found '>>' (1:9)
> 1 | _ = <div>>{"foo"}</div>
    |         ^^"
`;

exports[`snippet: #8 format[__babel_estree] 1`] = `
"Unexpected token (1:11)
> 1 | _ = <div><{"foo"}</div>
    |           ^
Cause: Unexpected token (1:10)"
`;

exports[`snippet: #8 format[acorn] 1`] = `
"Unexpected token (1:11)
> 1 | _ = <div><{"foo"}</div>
    |           ^
Cause: Unexpected token (1:10)"
`;

exports[`snippet: #8 format[babel] 1`] = `
"Unexpected token (1:11)
> 1 | _ = <div><{"foo"}</div>
    |           ^
Cause: Unexpected token (1:10)"
`;

exports[`snippet: #8 format[babel-ts] 1`] = `
"Unexpected token (1:11)
> 1 | _ = <div><{"foo"}</div>
    |           ^
Cause: Unexpected token (1:10)"
`;

exports[`snippet: #8 format[espree] 1`] = `
"Unexpected token { (1:11)
> 1 | _ = <div><{"foo"}</div>
    |           ^
Cause: Unexpected token {"
`;

exports[`snippet: #8 format[flow] 1`] = `
"Unexpected token \`{\`, expected the token \`>\` (1:11)
> 1 | _ = <div><{"foo"}</div>
    |           ^
Cause: Unexpected token \`{\`, expected the token \`>\` (1:10)"
`;

exports[`snippet: #8 format[meriyah] 1`] = `
"Unexpected token (1:11)
> 1 | _ = <div><{"foo"}</div>
    |           ^
Cause: [1:10-1:11]: Unexpected token"
`;

exports[`snippet: #8 format[oxc] 1`] = `
"Unexpected token (1:11)
> 1 | _ = <div><{"foo"}</div>
    |           ^"
`;

exports[`snippet: #8 format[oxc-ts] 1`] = `
"Expected \`>\` but found \`<\` (1:18)
> 1 | _ = <div><{"foo"}</div>
    |                  ^"
`;

exports[`snippet: #8 format[typescript] 1`] = `
"'>' expected. (1:18)
> 1 | _ = <div><{"foo"}</div>
    |                  ^
Cause: '>' expected."
`;

exports[`snippet: #8 format[yuku] 1`] = `
"Expected JSX element name, but found '{' (1:11)
> 1 | _ = <div><{"foo"}</div>
    |           ^"
`;

exports[`snippet: #8 format[yuku-ts] 1`] = `
"Expected '>' to close a type assertion, but found '<' (1:18)
> 1 | _ = <div><{"foo"}</div>
    |                  ^"
`;
